# solanaceae_bridge

./: CMakeLists.txt
plugins/: CMakeLists.txt  plugin_bridge.cpp
src/: CMakeLists.txt  bridge.cpp  bridge.hpp
